tests/ui/codegen/kernel_array_index.stderr
error[RX6001]: array expression is not supported by codegen yet (M2.3 host subset)
 --> $DIR/codegen/kernel_array_index.rx:5:13
  |
5 |     let a = [1.0, 2.0, 3.0]; //~ ERROR RX6001
  |             ^^^^^^^^^^^^^^^ not supported by MIR lowering yet (M3.1 host subset)
